# claude-plugins

./: README.md
.claude-plugin/: marketplace.json
plugins/audigeo/: .mcp.json  README.md
plugins/audigeo/.claude-plugin/: plugin.json
plugins/audigeo/agents/: audigeo-strategist.md
plugins/audigeo/commands/: audigeo-audit.md  audigeo-content.md  audigeo-login.md  audigeo-monitor.md  audigeo-status.md
plugins/audigeo/skills/audigeo-audit/: SKILL.md
plugins/audigeo/skills/audigeo-bot-analytics/: SKILL.md
plugins/audigeo/skills/audigeo-brand-profile/: SKILL.md
plugins/audigeo/skills/audigeo-content-gen/: SKILL.md
plugins/audigeo/skills/audigeo-hallucination-triage/: SKILL.md
plugins/neokanban/: .mcp.json  README.md
plugins/neokanban/.claude-plugin/: plugin.json
plugins/neorag/: .mcp.json  README.md
plugins/neorag/.claude-plugin/: plugin.json
plugins/neorag/commands/: kb-list.md  query.md
plugins/neorag/skills/neorag/: SKILL.md
plugins/spongram/: .mcp.json  README.md
plugins/spongram/.claude-plugin/: plugin.json
plugins/spongram/commands/: brain-graph.md  brain-stats.md  recall.md
plugins/spongram/hooks/: codemap-run.sh  hooks.json  install-codemap-hook.sh  post-commit.sh  recall-on-start.sh  setup-codemap.sh  uninstall-codemap-hook.sh
plugins/spt-ai/: .mcp.json  README.md
plugins/spt-ai/.claude-plugin/: plugin.json
plugins/spt-models/: .mcp.json  README.md  pyproject.toml
plugins/spt-models/.claude-plugin/: plugin.json
plugins/spt-models/server/: guide.md  main.py  spt_client.py
plugins/spt-models/skills/spt-models/: SKILL.md
(+9 files in other folders)
