[project]
name = "spt-models-mcp"
version = "1.4.0"
description = "MCP server for the SPT Models GPU inference stack (Claude Code plugin)."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
